<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StatTracker</string>
    <string name="splash">STAT\nTRACKER</string>

    <string name="team_management">Team Management</string>
    <string name="edit_team">Edit Team</string>
    
    
    <string name="start_game">Start Game</string>
    <string name="your_team">Your Team</string>
    <string name="other_team">vs</string>
    <string name="game_notes">Notes</string>
    <string name="game_in_progress">Game In Progress</string>
    <string name="vs_team_score">Other teams final score</string> 
        
	<string name="back">Back</string>
	<string name="save">Save</string>    
	<string name="edit">Edit</string>    	
	<string name="view">View</string>  
	<string name="delete">Delete</string>  	
	<string name="add">Add</string>  
	<string name="start">Start</string>  	
	<string name="history">History</string>  
	<string name="done">Done</string>  	
	
			
	<string name="team_label">Team:</string>    
	<string name="name_label">Name:</string>	
	<string name="first_name_label">First Name:</string>
	<string name="last_name_label">Last Name:</string>	
	<string name="jersey_label">Jersey:</string>	
			
			
	<string name="roster_label">Roster:</string>  
	<string name="select_player"></string>
	

    <string name="name">Name</string>	
	<string name="ground_ball">Ground Ball</string>
	<string name="assist">Assist</string>
	<string name="goal">Goal</string>	
</resources>
