<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="fullScreenActivityTheme" >

    <TextView
        android:id="@+id/playerNameHeader"
        android:layout_width="150sp"
        android:layout_height="50sp" />

    <TextView
        android:id="@+id/groundBallsHeader"
        style="@style/tableHeaderLabel"
        android:layout_toRightOf="@+id/playerNameHeader"
        android:text="@string/ground_ball" />
    
     <TextView
        android:id="@+id/assistsHeader"
        style="@style/tableHeaderLabel"
        android:layout_toRightOf="@+id/groundBallsHeader"
        android:text="@string/assist" />
     
      <TextView
        android:id="@+id/goalHeaders"
        style="@style/tableHeaderLabel"
        android:layout_toRightOf="@+id/assistsHeader"
        android:text="@string/goal" />

</RelativeLayout>