<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/player_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        style="@style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black" >

        <!-- http://stackoverflow.com/questions/15805926/button-highlight-in-android -->

        <Button
            android:id="@+id/team_management"
            style="@style/ButtonBarButton"
            android:layout_alignParentLeft="true"
            android:onClick="teamManagement"
            android:text="@string/team_management" />

        <Button
            android:id="@+id/start_game"
            style="@style/ButtonBarButton"
            android:layout_alignParentRight="true"
            android:onClick="startGame"
            android:text="@string/start_game" />
    </RelativeLayout>

    <Button
        android:id="@+id/history"
        style="@style/ButtonBarButton"
        android:layout_alignParentRight="true"
        android:onClick="history"
        android:text="@string/history" />

</RelativeLayout>