<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/TextViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_management"
                android:textSize="10pt" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dip" >

            <TextView
                android:id="@+id/TextViewTitle2"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_gravity="left"
                android:layout_weight=".3"
                android:text="@string/team_label"
                android:textSize="9pt" >
            </TextView>

            <Spinner
                android:id="@+id/select_team_spinner"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_gravity="left"
                android:layout_weight=".7" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dip"
            android:paddingBottom="25dip" >

            <Button
                android:id="@+id/addTeam"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:onClick="addTeam"
                android:text="@string/add" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dip"
            android:paddingTop="25dip" >

            <TextView
                android:id="@+id/editTeamNameLabel"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight=".3"
                android:text="@string/name_label"
                android:textSize="9pt" >
            </TextView>

            <EditText
                android:id="@+id/editTeamName"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight=".7"
                android:inputType="text" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5dip" >

            <TextView
                android:id="@+id/teamRosterLabel"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight=".3"
                android:text="@string/roster_label"
                android:textSize="9pt" >
            </TextView>

            <Spinner
                android:id="@+id/select_player_spinner"
                android:layout_width="0px"
                android:layout_height="fill_parent"
                android:layout_weight=".7"
                android:prompt="@string/select_player" />
        </TableRow>

        <RelativeLayout
            android:id="@+id/InnerRelativeLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/addPlayer"
                style="?buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:onClick="addPlayer"
                android:text="@string/add" >
            </Button>

            <Button
                android:id="@+id/editPlayer"
                style="?buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/addPlayer"
                android:onClick="editRoster"
                android:text="@string/edit" >
            </Button>
        </RelativeLayout>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/InnerRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/save"
            style="?buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="save"
            android:text="@string/save" >
        </Button>
    </RelativeLayout>

</RelativeLayout>